--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                       <a href="https://docs.google.com/presentation/d/1Cs3OVZDwBXN5CQSrbnTGDJ9kiTE8a0JAnmvnSqcjOXQ/edit?usp=sharing" target="_blank"
                         class="external-link button is-normal is-rounded is-dark">
                         <span class="icon">
-                          <i class="fa fa-file-word-o" aria-hidden="true"></i>
+                          <i class="fa fa-file-powerpoint" aria-hidden="true"></i>
                         </span>
                         <span>Slides</span>
                       </a>
